<resources>
    <string name="app_name">TodoCalendar</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_task">TaskActivity</string>
    <string name="nav_main_calendar">Calendar</string>
    <string name="nav_main_list">List</string>
    <string name="nav_main_projects">Projects</string>
    <string name="activity_task_name_hint">Name</string>

    <string name="task_setting_start_time">Start Time</string>
    <string name="task_setting_duration">Duration</string>
    <string name="task_setting_buffer">Buffer</string>
    <string name="task_setting_priority">Priority</string>
    <string name="list_item_settings_image_description">Settings icon</string>
    <string name="placeholder">Placeholder</string>
    <string name="tv_task_title">Title</string>
    <string name="dialog_accept">Accept</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="priority_low">Low</string>
    <string name="priority_medium">Medium</string>
    <string name="priority_high">High</string>
    <string name="task_setting_note">Note</string>
    <string name="task_setting_note_placeholder">Add note!</string>
    <string name="task_item_check">Finish</string>
    <string name="action_filter">Filter for</string>
    <string name="task_filter_all">All</string>
    <string name="task_filter_unfinished">Unfinished</string>
    <string name="task_filter_finished">Finished</string>
    <string name="task_filter_none">None</string>
    <string name="task_sort_date">Date</string>
    <string name="task_sort_prio">Priority</string>
    <string name="task_sort_name">Name</string>
    <string name="action_sort">Sort by</string>
    <string name="action_delete">Delete</string>
    <string name="dialog_project_label_etProject">Project Name</string>
    <string name="dialog_project_label_parent">Parent Project</string>
    <string name="dialog_fragment_title">Project</string>
    <string name="root_project">Root</string>
    <string name="fragment_list_help_text">Click the icon below to start with your first Task</string>
    <string name="fragment_list_grats_text">Congrats, no more Tasks for today. Lean back!</string>
    <string name="preference_file_key">de.vierheller.todocalendar</string>
</resources>
